kube_objects/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noz-auth
  template:
    metadata:
      labels:
        app: noz-auth
    spec:
      containers:
        - name: auth
          image: registry.cn-hongkong.aliyuncs.com/zkip/noz-auth:canary
          ports:
            - containerPort: 7000
          imagePullPolicy: Always
