kube_objects/core-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noz-core
  template:
    metadata:
      labels:
        app: noz-core
    spec:
      containers:
        - name: core
          image: registry.cn-hongkong.aliyuncs.com/zkip/noz-core:canary
          ports:
            - containerPort: 7703
          imagePullPolicy: Always
