kube_objects/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noz
  template:
    metadata:
      labels:
        app: noz
    spec:
      containers:
        - name: frontend
          image: registry.cn-hongkong.aliyuncs.com/zkip/noz:canary
          ports:
            - containerPort: 3000
