kube_objects/tb0-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb0-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noz-tb0
  template:
    metadata:
      labels:
        app: noz-tb0
    spec:
      containers:
        - name: tb0
          image: registry.cn-hongkong.aliyuncs.com/zkip/noz-tb0:canary
          ports:
            - containerPort: 3000
