kube_objects/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service

spec:
  selector:
    app: noz-auth

  type: ClusterIP

  ports:
    - port: 7000
      targetPort: 7000
