kube_objects/core-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-service

spec:
  selector:
    app: noz-core

  type: ClusterIP

  ports:
    - port: 7703
      targetPort: 7703
