kube_objects/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  selector:
    app: noz
  
  type: LoadBalancer
  
  ports:
    - protocol: TCP
      port: 3000
