kube_objects/tb0-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tb0-service

spec:
  selector:
    app: noz-tb0
  
  type: LoadBalancer
  
  ports:
    - port: 3000
